tests/error/poly_errors/right_to_left.err
Error: Cannot infer type (at $FILE:18:8)
   | 
16 | @guppy
17 | def main() -> None:
18 |     bar(foo(), 42)
   |         ^^^^^ Cannot infer type variables in expression of type `?T`

Guppy compilation failed due to 1 previous error
